# Flask

./: .env  pyproject.toml  requirements.txt  wsgi.py
flaskr/: .env  app.py  config.py  render-deploy.sh  render.yaml  render_deploy.sh  utils.py
flaskr/controllers/: auth.py  auth_controller.py  post.py  post_controller.py  role.py  role_controller.py  user.py  user_controller.py
flaskr/models/: base.py  post.py  role.py  user.py
flaskr/tests/: test_utils.py
flaskr/views/: post.py  role.py  user.py
instance/: blog.sqlite
migrations/: env.py
migrations/versions/: 5d563f43cef8_initial_migration.py  8f79bdece3a7_add_role_id_in_role_table.py
projeto_flask/: pyvenv.cfg
projeto_flask/Scripts/: activate  activate.bat
tests/integration/t_control/: conftest.py  test_auth.py  test_post.py  test_role.py  test_user.py
tests/unit/: test_utils.py
